--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Keys
 excludes=
+file.reference.AbsoluteLayout-RELEASE150.jar=C:\\Users\\manuc\\Downloads\\jar_files (1)\\AbsoluteLayout-RELEASE150.jar
 file.reference.db4o-8.0.184.15484.jar=C:\\Users\\manuc\\Downloads\\db4o-8.0.184.15484.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.db4o-8.0.184.15484.jar}
+    ${file.reference.db4o-8.0.184.15484.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE150.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
