--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Keys
+application.vendor=19452
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,15 @@ dist.jar=${dist.dir}/Keys.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Keys
+endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE150.jar=C:\\Users\\manuc\\Downloads\\jar_files (1)\\AbsoluteLayout-RELEASE150.jar
-file.reference.db4o-8.0.184.15484.jar=C:\\Users\\manuc\\Downloads\\db4o-8.0.184.15484.jar
+file.reference.AbsoluteLayout-RELEASE150.jar-2=C:\\Users\\19452\\Downloads\\AbsoluteLayout-RELEASE150.jar
+file.reference.db4o-8.0.184.15484.jar-1=C:\\Users\\19452\\Downloads\\db4o-8.0.184.15484.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.db4o-8.0.184.15484.jar}:\
-    ${file.reference.AbsoluteLayout-RELEASE150.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE150.jar-2}:\
+    ${file.reference.db4o-8.0.184.15484.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
