--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -35,14 +35,20 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Keys
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE150.jar-2=C:\\Users\\19452\\Downloads\\AbsoluteLayout-RELEASE150.jar
-file.reference.db4o-8.0.184.15484.jar-1=C:\\Users\\19452\\Downloads\\db4o-8.0.184.15484.jar
+file.reference.AbsoluteLayout-RELEASE150.jar=C:\\Users\\manuc\\Downloads\\jar_files (1)\\AbsoluteLayout-RELEASE150.jar
+file.reference.AbsoluteLayout-RELEASE150.jar-1=/Users/nagarjunmallesh/Downloads/AbsoluteLayout-RELEASE150.jar
+file.reference.db4o-8.0.184.15484.jar=C:\\Users\\manuc\\Downloads\\db4o-8.0.184.15484.jar
+file.reference.db4o-8.0.184.15484__1_.jar=/Users/nagarjunmallesh/Downloads/db4o-8.0.184.15484 (1).jar
+file.reference.jcalendar-1.4.jar=/Users/nagarjunmallesh/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.AbsoluteLayout-RELEASE150.jar-2}:\
-    ${file.reference.db4o-8.0.184.15484.jar-1}
-# Space-separated list of extra javac options
+    ${file.reference.db4o-8.0.184.15484.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE150.jar}:\
+    \# Space-separated list of extra javac options:\
+    ${file.reference.AbsoluteLayout-RELEASE150.jar-1}:\
+    ${file.reference.db4o-8.0.184.15484__1_.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
