--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -37,6 +37,9 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE150.jar=C:\\Users\\manuc\\Downloads\\jar_files (1)\\AbsoluteLayout-RELEASE150.jar
 file.reference.db4o-8.0.184.15484.jar=C:\\Users\\manuc\\Downloads\\db4o-8.0.184.15484.jar
+file.reference.db4o-8.0.184.15484.jar-1=C:\\Users\\19452\\Downloads\\db4o-8.0.184.15484.jar
+file.reference.javax.mail-1.6.1.jar=/Users/nagarjunmallesh/Downloads/SafeTogether/JARS/javax.mail-1.6.1.jar
+file.reference.javax.mail.jar=/Users/nagarjunmallesh/Downloads/SafeTogether/JARS/javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\manuc\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jxbrowser-7.24.4.jar=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jxbrowser-7.24.4.jar
 file.reference.jxbrowser-javafx-7.24.4.jar=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jxbrowser-javafx-7.24.4.jar
