Notification mail working

--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -37,6 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE150.jar=C:\\Users\\manuc\\Downloads\\jar_files (1)\\AbsoluteLayout-RELEASE150.jar
 file.reference.AbsoluteLayout-RELEASE150.jar-1=C:\\Users\\19452\\Downloads\\AbsoluteLayout-RELEASE150.jar
+file.reference.activation-1.1.jar=C:\\Users\\19452\\Downloads\\JARS\\JARS\\activation-1.1.jar
 file.reference.db4o-8.0.184.15484.jar=C:\\Users\\manuc\\Downloads\\db4o-8.0.184.15484.jar
 file.reference.db4o-8.0.184.15484.jar-1=C:\\Users\\19452\\Downloads\\db4o-8.0.184.15484.jar
 file.reference.javax.mail-1.6.1.jar=/Users/nagarjunmallesh/Downloads/SafeTogether/JARS/javax.mail-1.6.1.jar
@@ -81,7 +82,8 @@ javac.classpath=\
     ${file.reference.jxbrowser-swt-7.24.4.jar-1}:\
     ${file.reference.jxbrowser-win64-7.24.4.jar-1}:\
     ${file.reference.AbsoluteLayout-RELEASE150.jar-1}:\
-    ${file.reference.db4o-8.0.184.15484.jar-1}
+    ${file.reference.db4o-8.0.184.15484.jar-1}:\
+    ${file.reference.activation-1.1.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
