--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -44,6 +44,9 @@ file.reference.javax.mail-1.6.1.jar=/Users/nagarjunmallesh/Downloads/SafeTogethe
 file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\19452\\Downloads\\JARS\\JARS\\javax.mail-1.6.1.jar
 file.reference.javax.mail.jar=/Users/nagarjunmallesh/Downloads/SafeTogether/JARS/javax.mail.jar
 file.reference.javax.mail.jar-1=C:\\Users\\19452\\Downloads\\JARS\\JARS\\javax.mail.jar
+file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\javax.mail-1.6.1.jar
+file.reference.javax.mail.jar=/Users/nagarjunmallesh/Downloads/SafeTogether/JARS/javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\manuc\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\19452\\Downloads\\JARS\\JARS\\jcalendar-1.4.jar
 file.reference.jxbrowser-7.24.4.jar=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jxbrowser-7.24.4.jar
@@ -75,17 +78,8 @@ javac.classpath=\
     \# Space-separated list of extra javac options:\
     ${file.reference.javax.mail-1.6.1.jar-1}:\
     ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jxbrowser-7.24.4.jar-1}:\
-    ${file.reference.jxbrowser-javafx-7.24.4.jar-1}:\
-    ${file.reference.jxbrowser-swing-7.24.4.jar-1}:\
-    ${file.reference.jxbrowser-swt-7.24.4.jar-1}:\
-    ${file.reference.jxbrowser-win64-7.24.4.jar-1}:\
-    ${file.reference.AbsoluteLayout-RELEASE150.jar-1}:\
-    ${file.reference.db4o-8.0.184.15484.jar-1}:\
-    ${file.reference.activation-1.1.jar}
-javac.compilerargs=
-javac.deprecation=false
+    javac.compilerargs=:\
+    javac.deprecation=false:\
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
