--- a/Keys/nbproject/project.properties
+++ b/Keys/nbproject/project.properties
@@ -51,6 +51,8 @@ file.reference.javax.mail.jar-1=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\javax.m
 file.reference.javax.mail.jar-2=C:\\Users\\19452\\Downloads\\JARS\\JARS\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\manuc\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\19452\\Downloads\\JARS\\JARS\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.8.jar-1=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jcommon-1.0.8.jar
+file.reference.jfreechart-1.5.3.jar-1=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jfreechart-1.5.3.jar
 file.reference.jxbrowser-7.24.4.jar=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jxbrowser-7.24.4.jar
 file.reference.jxbrowser-7.24.4.jar-1=C:\\Users\\19452\\Downloads\\JARS\\JARS\\jxbrowser-7.24.4.jar
 file.reference.jxbrowser-javafx-7.24.4.jar=C:\\Users\\manuc\\Downloads\\JARS\\JARS\\jxbrowser-javafx-7.24.4.jar
@@ -112,7 +114,9 @@ javac.classpath=\
     ${file.reference.jxbrowser-win64-7.24.4.jar-1}:\
     ${file.reference.slf4j-api-2.0.0-alpha7.jar}:\
     ${file.reference.jfreechart-1.5.3.jar}:\
-    ${file.reference.jcommon-1.0.8.jar}
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jcommon-1.0.8.jar-1}:\
+    ${file.reference.jfreechart-1.5.3.jar-1}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
